fix key error. some desktop styling. trying to align tech list to bottom of page.

--- a/components/Pill/Pill.module.css
+++ b/components/Pill/Pill.module.css
@@ -15,3 +15,10 @@
   line-height: var(--line-height-print);
   color: var(--font-color-2);
 }
+
+@media (min-width: 768px) {
+  .pill {
+    font-size: var(--font-size-body-small);
+    line-height: var(--line-height-body-small);
+  }
+}
